packages/nemo-parser/tests/passing/toplevel.nemo
let x = 42
---
fn dude(x : i32, y : f32)
