packages/nemo-parser/tests/type_errors/unknown_field.nemo
struct F {
  x : i32
}

fn main() = {
  F { x = 10, y = 20 }.y
}
